--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -175,9 +175,8 @@
                                 <div class="col-lg-2">{{ _('Phone:') }}</div>
                                 <div class="col-lg-10 edit-data">
                                     <input pr-validation-answer="data_validation:phone" oles_type="number"
-                                           ng-maxlength="12"
                                            class="form-control border-radius" oles_ng-pattern="/[0-9]{6}/"
-                                           placeholder="+38(098)7654321" id="basic-url" aria-describedby="basic-addon3"
+                                           placeholder="+380 99 11 22 333" id="basic-url" aria-describedby="basic-addon3"
                                            ng-model="data.phone" oles_name="company_phone">
                                     <div ng-if=" 0 && formCompany.company_phone.$error.pattern" class="error-input">{{
                                         _('The
