statuses mess cleaned

--- a/profapp/templates/company/company_employees.html
+++ b/profapp/templates/company/company_employees.html
@@ -158,7 +158,7 @@
                         onclick: 'grid_rights',
                         afilter: {type: 'input'},
                         classes: function (id, entity, field) {
-                            return entity.employment.status !== 'ACTIVE' ? 'non-active' : '';
+                            return entity.employment.status !== 'EMPLOYMENT_ACTIVE' ? 'non-active' : '';
                         }
                     },
                     {
