--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -225,9 +225,9 @@
                      class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-company"
                      ng-repeat="employment in employments" id="employment_{{ employment.id }}">
 
-                    <a ng-href="{{ employment.status=='ACTIVE'?url_company_profile({company_id: employment.company.id}):'' }}"
+                    <a ng-href="{{ employment.status=='EMPLOYMENT_ACTIVE'?url_company_profile({company_id: employment.company.id}):'' }}"
                        class=""
-                       ng-class="{'disabled': employment.status!='ACTIVE'}">
+                       ng-class="{'disabled': employment.status!='EMPLOYMENT_ACTIVE'}">
                         <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3"><img pr-image-position="top"
                                                                               class="class_to_highlight"
                                                                               pr-image-url="{{ employment.company.logo.url }}"
@@ -235,7 +235,7 @@
                         <span class="col-lg-5 col-md-5 col-sm-5 col-xs-5">{{ employment.company.name }}</span>
                     </a>
 
-                    <div class="col-lg-4 col-md-3 col-sm-3 col-xs-2">{{ (employment.company.author_user_id==me_user_id)?
+                    <div class="col-lg-4 col-md-3 col-sm-3 col-xs-2 nowrap">{{ (employment.company.author_user_id==me_user_id)?
                         _('OWN COMPANY'):_('JOINED COMPANY with status ' + employment.status) }}
                     </div>
 
@@ -258,9 +258,9 @@
                      ng-repeat="employment in employments" id="employment_{{ employment.id }}">
 
                     <div class="company-thumbnail mb05em mt05em">
-                        <div class="caption some-company-info class_to_highlight"
-                             ng-class="{'disabled': employment.status!='ACTIVE'}">
-                            <a ng-href="{{ employment.status=='ACTIVE'?url_company_profile({company_id: employment.company.id}):'' }}">
+                        <div class="caption some-company-info class_to_highlight nowrap"
+                             ng-class="{'disabled': employment.status!='EMPLOYMENT_ACTIVE'}">
+                            <a ng-href="{{ employment.status=='EMPLOYMENT_ACTIVE'?url_company_profile({company_id: employment.company.id}):'' }}">
                                 <img pr-image-url="{{ employment.company.logo.url }}"
                                      style="width: 100%; height: 200px;"/>
                                 <h3 class="ellipsis">{{ employment.company.name }}</h3>
