--- a/profapp/templates/company/portals_memberees.html
+++ b/profapp/templates/company/portals_memberees.html
@@ -65,6 +65,7 @@
 
 
             $scope.set_new_status = function (id, row, column_name) {
+                if (!row.status_changes) return false;
                 $selectStatus({
                         title: $scope._('change status of membership by company dialog title', null, 'change status of membership'),
                         question: $scope._('You are going to change status of membership for company `%(company.name)s` at portal `%(portal.name)s`', row['membership']),
@@ -110,8 +111,6 @@
 
             $scope.gridOptions1 = $.extend({}, $scope.gridOptions, {
                 urlLoadGridData: $scope.url_portal_memberees,
-                rowTemplate: '<div ng-class="{\'disabled\': row.entity[\'disabled\'] }"><div ng-repeat="(colRenderIndex, col) in colContainer.renderedColumns track by col.colDef.name" class="ui-grid-cell" ng-class="{ \'ui-grid-row-header-cell\': col.isRowHeader }" ui-grid-cell></div></div>',
-                disableByField: 'disabled',
                 columnDefs: [
                     {
                         name: 'membership.portal.name', type: 'link',
