--- a/profapp/templates/portal/companies_members.html
+++ b/profapp/templates/portal/companies_members.html
@@ -24,7 +24,7 @@
             $scope.url_change_status = {{ raw_url_for('portal.membership_change_status')|safe }};
             $scope.url_set_rights = {{ raw_url_for('portal.membership_set_rights')|safe }};
 
-            $scope.all_available_rights = {{ all_available_rights|tojson|safe }};
+            $scope.employment = {{ employment|tojson|safe }};
             {% raw %}
 
             $scope.portal_link = function (link) {
@@ -36,6 +36,7 @@
             };
 
             $scope.set_new_status = function (id, row, column_name) {
+                if (!row.status_changes) return false;
                 $selectStatus({
                     title: $scope._('change status of membership by portal dialog title', null, 'change status of membership'),
                     question: $scope._('You are going to change status of membership for company `%(company.name)s` at portal `%(portal.name)s`', row['membership']),
@@ -51,6 +52,9 @@
 
 
             $scope.grid_rights = function (id, right_name, row, column_name) {
+                if (!$scope.employment.rights['PORTAL_MANAGE_MEMBERS_COMPANIES']) {
+                    return;
+                }
                 $rights({
                     'rights': row['membership']['rights'],
                     'set_url': $scope.url_set_rights({'membership_id': row['membership']['id']}),
@@ -92,13 +96,20 @@
 
                     publication_column(),
                     {
-                        name: 'membership.rights', width: '50', type: 'icons', afilter: {type: 'input'},
-                        onclick: 'grid_rights'
+                        name: 'membership.rights', width: '55',
+                        type: 'icons', afilter: {type: 'input'},
+                        onclick: 'grid_rights',
+                        classes: function (id, entity, field) {
+                            return $scope.employment.rights['PORTAL_MANAGE_MEMBERS_COMPANIES'] ? '' : 'inactive';
+                        }
                     },
                     {
                         width: '300',
                         name: 'membership.status',
-                        onclick: 'set_new_status'
+                        onclick: 'set_new_status',
+                        classes: function (id, entity, field) {
+                            return entity.status_changes ? '' : 'inactive';
+                        }
                     }
                 ]
             });
