--- a/profapp/templates/templates-angular.html
+++ b/profapp/templates/templates-angular.html
@@ -322,7 +322,6 @@
             selected_tags: []
         };
 
-        console.log($scope.data);
 
 
         $scope.afterSave = function (resp, defcallback) {
@@ -431,9 +430,9 @@
 <script type="text/ng-template" id="request_set_membership_plan.html">
     <div class="SelectMembershipPlanController_class"
          af ng-model="data" af-after-save="afterSave"
-         af-url="{{ request_set_t_f?url_request_membership_plan():url_set_membership_plan() }}">
+         af-url="{{ bycompany_byportal_t_f?url_request_membership_plan():url_set_membership_plan() }}">
         <div class="modal-header">
-            <h3 class="modal-title">{{ ::_(request_set_t_f?'please select desired plan':'please set plan') }}</h3>
+            <h3 class="modal-title">{{ ::_(bycompany_byportal_t_f?'please select desired plan':'please set plan') }}</h3>
             <h4>{{ __('for company `%(data.membership.company.name)s` in portal `%(data.membership.portal.name)s`')
                 }}</h4>
         </div>
@@ -463,10 +462,10 @@
                         }}</h5></th>
                 </tr>
 
-                <tr ng-class="{'link': request_set_t_f}"
-                    ng-click="request_set_t_f?(data.selected_by_user_plan_id = false):false">
+                <tr ng-class="{'link': bycompany_byportal_t_f}"
+                    ng-click="bycompany_byportal_t_f?(data.selected_by_user_plan_id = false):false">
                     <td class="tac border-none"><input ng-value="false" type="radio"
-                                                       ng-if="request_set_t_f" type="radio"
+                                                       ng-if="bycompany_byportal_t_f" type="radio"
                                                        ng-model="data.selected_by_user_plan_id"/></td>
                     <td>{{ data.membership.current_membership_plan_issued.name }}</td>
                     <td ng-bind-html="price(data.membership.current_membership_plan_issued)|html"></td>
@@ -484,14 +483,14 @@
 
                 <tr>
                     <th class="border-none"></th>
-                    <th ng-if="request_set_t_f" class="border-none" colspan="6"><h5
-                            ng-if="request_set_t_f && !data.membership.requested_membership_plan_issued.confirmed"
+                    <th ng-if="bycompany_byportal_t_f" class="border-none" colspan="6"><h5
+                            ng-if="bycompany_byportal_t_f && !data.membership.requested_membership_plan_issued.confirmed"
                     >{{ ::_('requested plan awaiting for confirmation') }}</h5>
-                        <h5 ng-if="request_set_t_f && data.membership.requested_membership_plan_issued.confirmed">{{
+                        <h5 ng-if="bycompany_byportal_t_f && data.membership.requested_membership_plan_issued.confirmed">{{
                             ::_('requested plan awaiting for current plan expiration') }}</h5>
                         </h5>
                     </th>
-                    <th ng-if="!request_set_t_f" class="border-none" colspan="6"><h5>{{ _('requested plan at
+                    <th ng-if="!bycompany_byportal_t_f" class="border-none" colspan="6"><h5>{{ _('requested plan at
                         %(request_date)s by
                         %(request_user_name)s', {
                         'request_date': moment(data.membership.requested_membership_plan_issued.cr_tm),
@@ -517,7 +516,7 @@
 
                 <tr>
                     <th class="border-none"></th>
-                    <th class="border-none" colspan="6"><h5>{{ ::_(request_set_t_f?'please select desired membership
+                    <th class="border-none" colspan="6"><h5>{{ ::_(bycompany_byportal_t_f?'please select desired membership
                         plan':'you can also select other available plan') }}</h5>
                 </tr>
 
@@ -544,14 +543,13 @@
                                ng-class="{'disabled': immediately_cant_be_selected(true)}"><input
                                 ng-disabled="immediately_cant_be_selected(true)" ng-value="true" type="radio"
                                 ng-model="data.membership.request_membership_plan_issued_immediately"/>&nbsp;{{
-                            _(request_set_t_f?'request immediately':'set immediately') }}</label>
-                        &nbsp;&nbsp;&nbsp;
+                            _(start_or_request()?'start immediately':'request to start immediately') }}</label>
+                        <br/>
                         <label class="p025em"
                                ng-class="{'disabled': immediately_cant_be_selected(false)}"><input
                                 ng-disabled="immediately_cant_be_selected(false)" ng-value="false" type="radio"
                                 ng-model="data.membership.request_membership_plan_issued_immediately"/>&nbsp;{{
-                            _(request_set_t_f?'request after the current plan will be finished':'set after the current
-                            plan will be finished') }}</label>
+                            _(start_or_request()?'schedule to start after the current plan will be finished':'request to start after the current plan will be finished') }}</label>
 
                     </td>
                 </tr>
@@ -569,7 +567,7 @@
                 <button class="btn btn-primary" type="button"
                         ng-click="$af.save(data)"
                         ng-disabled="!$af.isActionAllowed(data, 'save') ">
-                    {{ ::_(request_set_t_f?'Request plan':'Set plan') }}
+                    {{ start_or_request()?(data.membership.request_membership_plan_issued_immediately?'start plan':'schedule plan'):'request plan' }}
                 </button>
             </div>
             <button class="btn btn-warning" type="button" ng-click="cancel()">{{ _('Cancel') }}</button>
