--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -28,10 +28,8 @@
     {% endif %}
     <link href="{{ static_address('css/_profreader.css') }}" rel="stylesheet">
     <link href="{{ static_address('css/style.css') }}" rel="stylesheet">
-{#    <link href="{{ static_address('css/chat.css') }}" rel="stylesheet">#}
     <link href="{{ static_address('css/icons.css') }}" rel="stylesheet">
     <link href="{{ static_address('css/oles.css') }}" rel="stylesheet">
-    {#    <link rel="stylesheet" type="text/css" href="/static/new/jquery-datetimepicker/jquery.datetimepicker.css">#}
 
 
 {% endblock styles %}
@@ -98,8 +96,6 @@
 
 
     <script src="{{ static_address('angular-ajax-validator/ngAjaxValidator.js') }}"></script>
-    {#    <script src="{{ static_address('angular-ui-slider/slider.js') }}"></script>#}
-    {#    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>#}
 
     <script src="{{ static_address('js/profireader_angular.js') }}"></script>
 
@@ -108,7 +104,8 @@
 
         <script>
 
-            var pr_chat_socket = io.connect('//socket.{{ MAIN_DOMAIN }}');
+            var pr_chat_socket = io.connect('//socket.{{ MAIN_DOMAIN }}',
+                {'transports': ['websocket', 'polling']});
 
             pr_chat_socket.on('general_notification', function (resp) {
                 if (resp['unread']) {
